# char

./: .gitignore  .npmrc  AGENTS.md  Cargo.toml  package.json  pnpm-lock.yaml
.agents/skills/migrate-to-sqlite/: SKILL.md
.github/workflows/: cli_cd.yaml  desktop_cd.yaml  desktop_ci.yaml  desktop_publish.yaml  local_stt_e2e.yaml  mobile_bridge_ci.yaml  submit_flathub.yaml
apps/api/: Dockerfile
apps/api/src/: env.rs  main.rs  observability.rs
apps/chrome/: package.json
apps/claw/: Cargo.toml  Dockerfile  README.md
apps/claw/src/: main.rs
apps/cli/: Cargo.toml  build.rs
apps/cli-web/: package.json
apps/cli-web/src/: styles.css
apps/cli/src/: app.rs  cli.rs  interaction_debug.rs  main.rs  output.rs  tui_trace.rs
apps/cli/src/commands/: connect.rs  mod.rs  play.rs  status.rs  update_check.rs
apps/cli/src/commands/batch/: mod.rs  runtime.rs
apps/cli/src/commands/chat/: action.rs  app.rs  effect.rs  mod.rs  runtime.rs  screen.rs
apps/cli/src/commands/configure/: mod.rs
apps/cli/src/commands/connect/: mod.rs
apps/cli/src/commands/debug/transcribe/: app.rs  mod.rs  runtime.rs
apps/cli/src/commands/debug/transcribe/ui/: mod.rs  shell.rs
apps/cli/src/commands/entry/: mod.rs
apps/cli/src/commands/export/: transcript.rs
apps/cli/src/commands/integration/: claude.rs  codex.rs  opencode.rs
apps/cli/src/commands/listen/: mod.rs
apps/cli/src/commands/meetings/: mod.rs
apps/cli/src/commands/meetings/live/: mod.rs
apps/cli/src/commands/meetings/live/app/: mod.rs
apps/cli/src/commands/meetings/ui/: mod.rs  notepad_state.rs
apps/cli/src/commands/meetings/view/: app.rs  mod.rs
apps/cli/src/commands/model/: download.rs  list.rs  mod.rs  screen.rs
apps/cli/src/commands/record/: app.rs  mod.rs
apps/cli/src/commands/todo/: mod.rs
apps/cli/src/commands/transcribe/: mod.rs
apps/cli/src/commands/update/: mod.rs
apps/cli/src/config/: cactus.rs  desktop.rs  mod.rs  session_context.rs  stt.rs
apps/cli/src/llm/: config.rs  mod.rs  provider.rs
apps/cli/src/tui/: input.rs  mod.rs  viewport.rs  waveform.rs
apps/desktop/: index.html  package.json
apps/desktop/src/: main.tsx  routeTree.gen.ts  test-setup.ts
apps/desktop/src-tauri/: Cargo.toml  Info.plist  tauri.conf.json  tauri.conf.nightly.json  tauri.conf.staging.json
apps/meetingsucks/: package.json
apps/mobile/: package.json
apps/slack-internal/: package.json
apps/storybook/: package.json
apps/stripe/: package.json
apps/unsigned-web/src/: styles.css
apps/web/: content-collections.ts  package.json  playwright.config.ts  vite.config.ts
apps/web/public/: llms.txt
apps/web/src/: changelog.ts  routeTree.gen.ts  router.tsx  styles.css
crates/activity-capture/: Cargo.toml
crates/activity-capture-dev/: Cargo.toml
crates/activity-capture-dev/src/: app.rs  event_row.rs  export.rs  formatting.rs  main.rs  options.rs  ui.rs
crates/activity-capture-dev/src/widgets/: details.rs  footer.rs  header.rs  row.rs  screen.rs
crates/activity-capture-interface/: Cargo.toml  build.rs  schema.gen.json
crates/activity-capture-interface/src/: lib.rs  types.rs
crates/activity-capture/src/: observation.rs
crates/agent-core/: Cargo.toml
crates/agent-core/src/: lib.rs
crates/api-support/: Cargo.toml
crates/api-support/src/: lib.rs
crates/audio-utils/src/: lib.rs
crates/audio/src/: mic.rs
crates/cactus/: Cargo.toml
crates/cactus/src/: error.rs  lib.rs
crates/cactus/src/llm/: complete.rs  context.rs  mod.rs  request.rs  result.rs  schema.rs
crates/cactus/src/stt/: mod.rs  result.rs  stream.rs  transcriber.rs
crates/cactus/tests/: llm.rs
crates/cloudsync/: AGENTS.md
crates/cloudsync/src/: error.rs  init.rs  lib.rs  network.rs
crates/codex/src/: lib.rs
crates/db-app/: Cargo.toml  SPEC.md
crates/db-app/migrations/: 20260411000000_daily_notes_and_summaries.sql  20260413000000_activity_capture.sql  20260413010000_prompt_overrides.sql
crates/db-app/src/: activity_ops.rs  activity_types.rs  cloudsync.rs  lib.rs  prompt_override_ops.rs  prompt_override_types.rs
crates/db-app2/: Cargo.toml
crates/db-app2/migrations/: 20260406000000_daily_notes.sql  20260406000001_tasks.sql  20260406000002_activity.sql
crates/db-app2/src/: activity_ops.rs  activity_types.rs  daily_notes_ops.rs  daily_notes_types.rs  lib.rs  tasks_ops.rs  tasks_types.rs
crates/db-change/src/: lib.rs
crates/db-core/: Cargo.toml
crates/db-core2/: AGENTS.md  Cargo.toml
crates/db-core2/src/: cloudsync.rs  lib.rs  pool.rs
crates/db-core2/tests/: e2e.rs
crates/db-live-query/: AGENTS.md  Cargo.toml
crates/db-live-query/src/: error.rs  explain.rs  lib.rs  query.rs  runtime.rs  schema.rs  watch.rs
crates/db-live-query/tests/: cloudsync.rs  runtime.rs
crates/db-live-query/tests/common/: mod.rs
crates/db-migrate/: AGENTS.md  Cargo.toml
crates/db-migrate/src/: lib.rs  migrate.rs
crates/db-migrate/tests/: e2e.rs
crates/db-watch/: AGENTS.md  Cargo.toml
crates/db-watch/src/: explain.rs  lib.rs
crates/db-watch/tests/: e2e.rs
crates/device-monitor/src/: linux.rs
crates/exedev/assets/: claw-setup.sh
crates/fs-sync-core/: Cargo.toml
crates/fs-sync-core/benches/: audio_import.rs
crates/fs-sync-core/src/: audio.rs
crates/mobile-bridge/: Cargo.toml
crates/opencode/: Cargo.toml
crates/supabase-auth/: Cargo.toml
crates/supabase-auth/src/: session.rs
crates/supabase-auth/src/refresh/: error.rs  mod.rs
e2e/blackbox/: package.json
plugins/activity-capture/: Cargo.toml
plugins/activity-capture/js/: bindings.gen.ts
plugins/activity-capture/src/: analysis.rs  commands.rs  events.rs  lib.rs  runtime.rs
plugins/agent/: build.rs
plugins/auth/: Cargo.toml
plugins/db/: AGENTS.md  Cargo.toml
plugins/db/js/: bindings.gen.ts  index.ts
plugins/db/src/: commands.rs  error.rs  lib.rs  runtime.rs
plugins/db/src/import/: mod.rs  templates.rs
plugins/local-llm/: Cargo.toml
plugins/local-stt/: Cargo.toml
plugins/notification/: Cargo.toml
plugins/transcription/: Cargo.toml  build.rs  package.json
plugins/windows/: Cargo.toml  build.rs
scripts/: setup-flathub.sh
(+433 files in other folders)
