[package]
name = "activity-capture-dev"
version = "0.1.0"
edition = "2024"
publish = false

[[bin]]
name = "activity-capture"
path = "src/main.rs"

[dependencies]
hypr-activity-capture = { workspace = true }
hypr-llm-cactus = { workspace = true }
hypr-screen-core = { workspace = true }

axum = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true, features = ["derive"] }
crossterm = { workspace = true }
futures-util = { workspace = true }
ratatui = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["macros", "net", "rt", "sync", "time"] }
url = { workspace = true }
