[package]
name = "activity-capture-interface"
version = "0.1.0"
edition = "2024"

[dependencies]
base64 = { workspace = true }
futures-core = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }

[build-dependencies]
schemars = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
