[package]
name = "activity-capture"
version = "0.1.0"
edition = "2024"

[features]
specta = ["hypr-activity-capture-interface/specta"]

[dependencies]
hypr-activity-capture-interface = { workspace = true }
hypr-activity-capture-macos = { workspace = true }
hypr-activity-capture-windows = { workspace = true }
hypr-screen-core = { workspace = true }

serde = { workspace = true }
uuid = { workspace = true, features = ["v4"] }
