[package]
name = "cactus"
version = "0.1.0"
edition = "2024"
license = "MIT"

[features]
examples = ["dep:colored"]

[dependencies]
cactus-sys = { git = "https://github.com/cactus-compute/cactus", package = "cactus-sys", rev = "0d44b063bd249f06c80d269e2c0b11dcf32513c4" }

hypr-cactus-model = { workspace = true }
hypr-language = { workspace = true }
hypr-llm-types = { workspace = true }

colored = { version = "3", optional = true }
futures-util = { workspace = true }
tokio = { workspace = true, features = ["rt", "sync"] }
tokio-stream = { workspace = true }
tokio-util = { workspace = true }

jsonschema = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
hypr-data = { workspace = true }
insta = { workspace = true }

[[bench]]
name = "vad"
harness = false

[[example]]
name = "chat"
required-features = ["examples"]
