[package]
name = "db-app2"
version = "0.1.0"
edition = "2024"

[dependencies]
hypr-db-core2 = { workspace = true }
sqlx = { workspace = true, features = ["runtime-tokio", "sqlite", "sqlite-unbundled", "macros", "migrate"] }

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros"] }
