[package]
name = "db-core2"
version = "0.1.0"
edition = "2024"

[dependencies]
backon = { workspace = true }
hypr-cloudsync = { workspace = true }
libsqlite3-sys = "0.30"
serde = { workspace = true, features = ["derive"] }
sqlx = { workspace = true, features = ["runtime-tokio", "sqlite"] }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt", "sync", "time"] }
tracing = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt", "time"] }
uuid = { workspace = true, features = ["v4"] }
