[package]
name = "db-live-query"
version = "0.1.0"
edition = "2024"

[dependencies]
hypr-db-core2 = { workspace = true }
hypr-db-watch = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true, features = ["runtime-tokio", "sqlite", "sqlite-unbundled"] }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["macros", "sync", "time"] }
uuid = { workspace = true, features = ["v4"] }

[dev-dependencies]
anyhow = { workspace = true }
hypr-db-app = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt", "time"] }
