[package]
name = "tauri-plugin-db"
version = "0.1.0"
authors = ["You"]
edition = "2024"
exclude = ["/js", "/node_modules"]
links = "tauri-plugin-db"
description = ""

[dependencies]
hypr-db-app = { workspace = true }
hypr-db-core2 = { workspace = true }
hypr-db-live-query = { workspace = true }
hypr-storage = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
specta = { workspace = true, features = ["serde_json"] }
specta-typescript = { workspace = true }
sqlx = { workspace = true, features = ["runtime-tokio", "sqlite", "sqlite-unbundled"] }
tauri = { workspace = true, features = ["test"] }
tauri-specta = { workspace = true, features = ["derive", "typescript"] }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["rt", "sync"] }

[dev-dependencies]
anyhow = { workspace = true }
serde_json = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt", "time"] }

[build-dependencies]
tauri-plugin = { workspace = true, features = ["build"] }
